<resources>
    <string name="app_name">Rich Reach Assignment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="feature_1">Show list of manager</string>
    <string name="feature_2">Query Builder</string>
    <string name="employee_name">Employee Name</string>
    <string name="title">Title</string>
    <string name="department">Department</string>
    <string name="time_as_manager">Time as Manager</string>
    <string name="status">Status</string>
    <string name="press_button">Please click on the show manager button to load the data for first time</string>
    <string name="enter_you_query">Enter you Query</string>
    <string name="submit">Submit</string>
    <string name="please_refer_the_below_table_structure_you_if_find_any_problem_for_writing_query">Please refer the below table structure you if find any problem for writing query</string>
    <string name="table_structure_for_details">Table Structure for \'details\':</string>
    <string name="column_name_data_type">Column Name | Data Type</string>
    <string name="dotted_line">- - - - - - - - - - - - - - - - - - - - - - - -</string>
    <string name="employeename_text">employeeName | TEXT</string>
    <string name="employeenumber_integer">employeeNumber | INTEGER</string>
    <string name="employeetitle_text">employeeTitle | Text</string>
    <string name="employeedept_text">employeeDept | Text</string>
    <string name="timeasmanager_text">timeAsManager | Text</string>
    <string name="is_active_integer">Is Active | Integer</string>
    <string name="you_need_to_connect_to_internet_to_login">You need to connect to internet to login</string>
</resources>